Fix 'Grader report preferences layout broken', ref: https://moodle.org/mod/forum/discuss.php?d=425016&parent=1715752.

--- a/style/extras.css
+++ b/style/extras.css
@@ -47,10 +47,6 @@
     color: [[setting:linkhover]];
 }
 
-.gradereport-grader-table img {
-    max-width: none;
-}
-
 .singleselect {
     display: inline-block;
     max-width: 100%;
